# datathon2026

./: .gitignore  README.md  base.ipynb  baseline.ipynb  direct.ipynb  image.ipynb  pyproject.toml  run_submission.py  submission_baseline.csv  submission_direct.csv  submission_final.csv
.prompts/: AGENT_SUMMARY.md  eda.md
data/datathon-2026-round-1/: baseline.ipynb
notebooks/: eda.ipynb  feature_augmentation.ipynb  image.ipynb  operation_exploration.ipynb  profit.ipynb  run_baseline.ipynb  submission.ipynb  time_feature.ipynb  traffic.ipynb
report/: 01_descriptive_what_happened.md
scratch/: analyze_2019_break.py  analyze_customer_migration.py  analyze_fair_profit.py  analyze_lunar_patterns.py  analyze_order_timing.py  analyze_payday_characteristics.py  analyze_portfolio_viability.py  analyze_product_versioning.py  analyze_product_versions_deep.py  analyze_seasonal_popularity.py  analyze_seasonal_popularity_yoy.py  analyze_segments.py  analyze_september_break.py  analyze_unit_price_extra.py  analyze_unit_price_gap.py  analyze_unit_price_hypothesis.py  check_anomalies_temp.py  check_q1.py  compare_daily_18_19.py  deep_dive_2019_agents.py  deepdive_turnover_promo.py  evaluate_core_products.py  falsify_discount_amount.py  falsify_price_assumption.py  generate_extra_charts.py  genz_collapse_sku_vs_qty.py  identify_loss_customers.py  recalculate_turnover.py  refine_lunar_charts.py  test_loss_leader.py  test_revenue_formula.py  top_profit_turnover.py  transform_sales.py  verify_01_report.py  what_is_products_price.py
src/: __init__.py  data_utils.py
(+21 files in other folders)
